# promptloop

./: .gitignore  .pre-commit-config.yaml  LICENSE  Promptloop TEMPLATE.txt  README.md  SECURITY_PROTOCOL.md  pre commit template.txt  pyproject.toml
src/promptloop/: __init__.py  engine.py  functions.py  guard.py  history.py  mcp_tools.py  multi_input.py  one_shot.py  output.py  signals.py  storage.py  tests.py  tokens.py  types.py  utils.py
