[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptloop"
version = "0.1.0"
description = "A safety-first, production-ready wrapper for MLX-LM on Apple Silicon."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx-lm == 0.30.2",
    "mlx == 0.30.1",
    "psutil == 7.2.1",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}