[project]
name = "promptloop"
version = "0.1.0"
description = "A safety-first, production-ready wrapper for MLX-LM on Apple Silicon."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "mlx==0.30.6",
    "mlx-lm==0.30.7",
    "psutil==7.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptloop"]
